--- a/whist-app/package.json
+++ b/whist-app/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@webcomponents/custom-elements": "^1.0.0-alpha.3",
+    "angular2-modal": "^2.0.3",
     "animate.css": "^3.5.2",
     "clarity-angular": "^0.8.3",
     "clarity-icons": "^0.8.3",
