--- a/whist-app/package.json
+++ b/whist-app/package.json
@@ -24,10 +24,12 @@
     "@webcomponents/custom-elements": "^1.0.0-alpha.3",
     "angular2-modal": "^2.0.3",
     "animate.css": "^3.5.2",
+    "body-parser": "^1.16.0",
     "clarity-angular": "^0.8.3",
     "clarity-icons": "^0.8.3",
     "clarity-ui": "^0.8.3",
     "core-js": "^2.4.1",
+    "express": "^4.14.0",
     "mutationobserver-shim": "^0.3.2",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
