--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "postinstall": "ng build --aot -prod"
+  },
+  "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.9"
   },
   "private": true,
   "dependencies": {
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
+    "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
@@ -22,6 +28,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@webcomponents/custom-elements": "^1.0.0-alpha.3",
+    "angular-cli": "1.0.0-beta.25.5",
     "angular2-modal": "^2.0.3",
     "animate.css": "^3.5.2",
     "body-parser": "^1.16.0",
@@ -29,17 +36,15 @@
     "clarity-icons": "^0.8.3",
     "clarity-ui": "^0.8.3",
     "core-js": "^2.4.1",
-    "express": "^4.14.0",
+    "express": "^4.14.1",
     "mutationobserver-shim": "^0.3.2",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
